--- a/weddinggallery/core/templates/core/photo_form.html
+++ b/weddinggallery/core/templates/core/photo_form.html
@@ -23,70 +23,86 @@
     </thead>
     <tbody>
       {% for photo in photos %}
-        <tr>
-          <td><img src="{{ photo.upload.url }}"></td>
-          <td>{{ photo.uploaded_at }}</td>
-          <td>{{ photo.upload.size|filesizeformat }}</td>
-          {% if user.is_authenticated %}
-            <td>
-              <input type="button" id="id_status_{{ photo.id }}" value="{{ photo.status }}" onclick="toggle{{ photo.id }}(this);">
-              {% block javascript %}
-                <script>
-                 function toggle{{ photo.id }}(button)
-                  {
-                    console.log( "{{ photo.status }}" );
-                    var photo_id = "{{ photo.id }}";
-                    var approveStatus = "Approve";
-                    var disapproveStatus = "Disapprove";
-                    var status{{ photo.id }} = document.getElementById("id_status_{{ photo.id }}").value;
+        
 
-                    if(status{{ photo.id }} == approveStatus){
+        {% if user.is_authenticated %}
 
-                      $.ajax({
-                        url: '/change_status_photo/',
-                        data: {
-                          'photo_id': photo_id,
-                          'photo_status': "Disapprove"
-                        },
-                        dataType: 'json',
-                        success: function () {
-                          alert("Photo was update with success.");                          
-                          document.getElementById("id_status_{{ photo.id }}").value = disapproveStatus;
-                        },
-                        error: function() {
-                          alert("Photo status update with error.");
-                        }
-                      });
+          <tr>
+            <td><img src="{{ photo.upload.url }}"></td>
+            <td>{{ photo.uploaded_at }}</td>
+            <td>{{ photo.upload.size|filesizeformat }}</td>
+              <td>
+                <input type="button" id="id_status_{{ photo.id }}" value="{{ photo.status }}" onclick="toggle{{ photo.id }}(this);">
+                {% block javascript %}
+                  <script>
+                   function toggle{{ photo.id }}(button)
+                    {
+                      console.log( "{{ photo.status }}" );
+                      var photo_id = "{{ photo.id }}";
+                      var approveStatus = "Approve";
+                      var disapproveStatus = "Disapprove";
+                      var status{{ photo.id }} = document.getElementById("id_status_{{ photo.id }}").value;
 
+                      if(status{{ photo.id }} == approveStatus){
+
+                        $.ajax({
+                          url: '/change_status_photo/',
+                          data: {
+                            'photo_id': photo_id,
+                            'photo_status': "Disapprove"
+                          },
+                          dataType: 'json',
+                          success: function () {
+                            alert("Photo was update with success.");                          
+                            document.getElementById("id_status_{{ photo.id }}").value = disapproveStatus;
+                          },
+                          error: function() {
+                            alert("Photo status update with error.");
+                          }
+                        });
+
+                        
+                     }
+
+                      else if(status{{ photo.id }} == disapproveStatus){
                       
-                   }
+                       $.ajax({
+                          url: '/change_status_photo/',
+                          data: {
+                            'photo_id': photo_id,
+                            'photo_status': "Approve"
+                          },
+                          dataType: 'json',
+                          success: function () {
+                            alert("Photo was update with success.");                          
+                            document.getElementById("id_status_{{ photo.id }}").value = approveStatus;
+                          },
+                          error: function() {
+                            alert("Photo status update with error.");
+                          }
+                        });
 
-                    else if(status{{ photo.id }} == disapproveStatus){
-                    
-                     $.ajax({
-                        url: '/change_status_photo/',
-                        data: {
-                          'photo_id': photo_id,
-                          'photo_status': "Approve"
-                        },
-                        dataType: 'json',
-                        success: function () {
-                          alert("Photo was update with success.");                          
-                          document.getElementById("id_status_{{ photo.id }}").value = approveStatus;
-                        },
-                        error: function() {
-                          alert("Photo status update with error.");
-                        }
-                      });
+                     }
+                    }
+                  </script>
+                {% endblock %}
+              </td>       
+          </tr>
 
-                   }
-                  }
-                </script>
-              {% endblock %}
-            </td>
-            </label>       
+        {% else %}
+
+          {% if photo.status == "Disapprove" %}
+            <tr>
+            <td><img src="{{ photo.upload.url }}"></td>
+            <td>{{ photo.uploaded_at }}</td>
+            <td>{{ photo.upload.size|filesizeformat }}</td> 
+            </tr>
           {% endif %}
-        </tr>
+
+        {% endif %}
+
+
+
       {% empty %}
         <tr>
           <td colspan="3">No photos.</td>
