--- a/weddinggallery/core/templates/core/photo_form.html
+++ b/weddinggallery/core/templates/core/photo_form.html
@@ -8,6 +8,7 @@
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Submit</button>
+    <a> Important: You will see photos after Owner approve. </a>
   </form>
 
   <table>
